Fix overflow properties in globals.css for better layout control

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,8 +12,8 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   width: 100%;
-  overflow-x: hidden;
   height: 100%;
+
 }
 
 body {
@@ -22,6 +22,7 @@ body {
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
 }
 
 * {
